@@ -37,12 +37,9 @@ hamlib-*.tar.gz
 include/config.h
 include/config.h.in
 include/stamp-h1
-libltdl/
-macros/argz.m4
 macros/libtool.m4
 macros/ltoptions.m4
 macros/ltsugar.m4
-macros/ltdl.m4
 macros/ltversion.m4
 macros/lt~obsolete.m4
 macros/pkg.m4
