@@ -177,7 +177,6 @@ END_OF_README
 ./configure --host=i586-mingw32msvc \
  --prefix=`pwd`/mingw-inst \
  --without-cxx-binding \
- --with-included-ltdl \
  PKG_CONFIG_LIBDIR=${LIBUSB_WIN32_BIN_PATH}/lib/pkgconfig
 
 make install
